2011-11-29:
 - Version 1.0beta2

2011-11-12:
 - Parser fixes

2011-11-10:
 - Fixed parsing of the semicolon in "case ... esac;"
 - Fixed hidden files in absolute path completion
 - Version 1.0beta1

2011-11-09:
 - Fixed parsing of conditional commands [[ x ]] and test expressions [ x ]
 - Compatibility with IntelliJ 11 EAP

2011-08-12:
 - Fixed Exception in file path completion provider

2011-05-19:
 - Version 1.0

2011-05-17:
 - Fixed compatibility with IntelliJ IDEA 10.5
 - The Bash REPL now uses Enter instead of Ctrl+Enter

2011-05-03:
 - Removed Java options tab from Bash run configuration settings

2011-04-11:
 - Bug: NPE occurred when editing files which are not part of the current project
 - Version 0.9.23

2011-04-01:
 - Restored documentation lookup for internal and external commands
 - Version 0.9.22

2011-03-31:
 - #47: Lexer fixes to parse ${_a}
 - #46: Default value with parentheses not parsed correctly

2011-03-29:
 - Find usages enabled on function definitions

2011-03-27:
 - Improved performance of parsing files which contain include files

2011-03-26:
 - Inspection to detect array use of simple variables
 - Inspection to detect simple use of array variables
 - It is possible now to defined functions which have the same name as built-in Bash commands
 - Inspection to mark functions which override built-in Bash commands

2011-03-22:
 - (Almost) full support for arrays
 - Version 0.9.21

2011-03-12:
 - Improved array support

2011-03-08:
 - Fixed unused function inspection in files which reference elements in files which include the file

2011-02-19:
 - Fixed detection of deep recursive file include loops
 - Version 0.9.20

2011-02-18:
 - Ctrl+B on file references (e.g. in include command) is supported now
 - Issue #35: Math calculations using square brackets not supported

2011-02-15:
  - Improved autocompletion

2011-02-12:
 - Documentation lookup for variable definitions, the comment before the definition is displayed, if available